# rustorio

./: .gitignore  Cargo.toml  README.md  defines.json
circuits/: clock-generic.fc  clock.fc  lamps.fc
rustorio-blueprint/: Cargo.toml
rustorio-blueprint/src/: lib.rs  types.rs
rustorio-circuits/: Cargo.toml  README.md
rustorio-circuits/examples/: clock-generic.fc  clock.fc
rustorio-circuits/src/: component.rs  ir.rs  main.rs  module_old.rs  simulator.rs  test.txt
rustorio-circuits/src/blueprint/: mod.rs
rustorio-circuits/src/compiler/: mod.rs
rustorio-circuits/src/ir/: assembler.rs  mod.rs
rustorio-circuits/src/parser/: ast.rs  mod.rs  parser.lalrpop
rustorio-circuits/src/signals/: mod.rs  vanilla.rs
rustorio-core/: Cargo.toml  defines.lua
rustorio-core/src/: config.rs  error.rs  lib.rs  lua_utils.rs  mod_loader.rs  version.rs
rustorio-core/src/blueprint/: mod.rs  tool.rs  types.rs
rustorio-core/src/lua_api/: mod.rs
rustorio-core/src/lua_utils/: data.rs  mod.rs
rustorio-core/src/prototypes/: accumulator.rs  achievement.rs  active_defense_equipment.rs  ambient_sound.rs  ammo_category.rs  ammo_item.rs  ammo_turret.rs  animation.rs  arithmetic_combinator.rs  armor.rs  arrow.rs  artillery_flare.rs  artillery_projectile.rs  artillery_turret.rs  artillery_wagon.rs  assembling_machine.rs  autoplace_control.rs  battery_equipment.rs  beacon.rs  beam.rs  belt_immunity_equipment.rs  blueprint_book.rs  blueprint_item.rs  boiler.rs  build_entity_achievement.rs  burner_generator.rs  capsule.rs  car.rs  cargo_wagon.rs  character.rs  character_corpse.rs  cliff.rs  combat_robot.rs  combat_robot_count_achievement.rs  combinator.rs  constant_combinator.rs  construct_with_robots_achievement.rs  construction_robot.rs  container.rs  copy_paste_tool.rs  (+166 more)
rustorio-core/src/prototypes/prototypes/: accumulator.rs  achievement.rs  active_defense_equipment.rs  ambient_sound.rs  ammo_category.rs  ammo_item.rs  ammo_turret.rs  animation.rs  arithmetic_combinator.rs  armor.rs  arrow.rs  artillery_flare.rs  artillery_projectile.rs  artillery_turret.rs  artillery_wagon.rs  assembling_machine.rs  autoplace_control.rs  battery_equipment.rs  beacon.rs  beam.rs  belt_immunity_equipment.rs  blueprint_book.rs  blueprint_item.rs  boiler.rs  build_entity_achievement.rs  burner_generator.rs  capsule.rs  car.rs  cargo_wagon.rs  character.rs  character_corpse.rs  cliff.rs  combat_robot.rs  combat_robot_count_achievement.rs  combinator.rs  constant_combinator.rs  construct_with_robots_achievement.rs  construction_robot.rs  container.rs  copy_paste_tool.rs  (+164 more)
rustorio-core/src/types/: bounding_box.rs  collision_mask.rs  mod.rs
rustorio-data/: Cargo.toml
rustorio-data-derive/: Cargo.toml
rustorio-data-derive/src/: lib.rs  lua.rs  prototype.rs
rustorio-data/src/: __private.rs  lib.rs  nalgebra.rs  palette.rs  value.rs
rustorio-export/: Cargo.toml
rustorio-export/src/: export.rs  main.rs
rustorio-loader/: Cargo.toml
rustorio-loader/src/: files.rs  lib.rs  lua.rs  version.rs
rustorio-loader/src/proptree/: de.rs  mod.rs
rustorio-locale/: Cargo.toml
rustorio-locale/src/: lib.rs
rustorio-lua-api/: Cargo.toml
rustorio-lua-api-derive/: Cargo.toml
rustorio-lua-api-derive/src/: lua.rs
rustorio-lua-api/src/: lib.rs  nalgebra.rs  palette.rs  utils.rs  value.rs
rustorio-lua-api/src/loader/: files.rs  lua.rs  lua_utils.rs  mod.rs
rustorio-lua-api/src/locale/: mod.rs  parser.rs
rustorio-main/: Cargo.toml
rustorio-main/src/: cheat_sheet.rs  config.rs  main.rs  materials.rs  time.rs
rustorio-planner/: Cargo.toml
rustorio-proptree/: Cargo.toml
rustorio-proptree/src/: de.rs  error.rs  lib.rs  value.rs
rustorio-prototype/: Cargo.toml
rustorio-prototype/src/: achievement.rs  entity.rs  fluid.rs  item.rs  lib.rs  material.rs  recipe.rs  technology.rs  types.rs
rustorio-protoview/: Cargo.toml
rustorio-protoview/src/: main.rs
rustorio-remote/factorio-data/: Cargo.toml
rustorio-remote/factorio-data/src/: blueprint.rs  error.rs  lib.rs  types.rs
rustorio-remote/factorio-remote/: .gitignore  Cargo.toml  README.md
rustorio-remote/factorio-remote/examples/: available_signals.rs  hello_world.rs  import_blueprint.rs  radar.rs  receive_signals.rs  send_signals.rs  train_schedule.rs
rustorio-remote/factorio-remote/src/: error.rs  lib.rs  request.rs
rustorio-remote/mods/janosch-lib/: README.md  debug.lua  entities.lua  events.lua  info.json  log.lua  utils.lua
rustorio-remote/mods/janosch-remote/: LICENSE  README.md  config.lua  error.lua  info.json  remote.lua
rustorio-remote/mods/janosch-remote/locale/en/: locale.cfg
rustorio-remote/mods/simulation-hacking/: README.md  config.lua  control.lua  data.lua  info.json  serde.lua
rustorio-remote/mods/simulation-hacking/graphics/: NOTES.md  signal.xcf
rustorio-remote/mods/simulation-hacking/locale/en/: locale.cfg
rustorio-tool/: Cargo.toml  Trunk.toml  index.html
rustorio-tool/src/: data.rs  error.rs  main.rs  routes.rs
rustorio-tool/src/logic/: materials.rs  mod.rs  modules.rs  research.rs
rustorio-tool/src/ui/: icon.rs  mod.rs  nav.rs  select.rs
rustorio-tool/src/ui/pages/: home.rs  mod.rs  research.rs
rustorio-tool/static/: app.css
scripts/: Prototype_overview.html  generate_prototype_code.py  prototypes.json  prototypes_from_wiki.py  types.txt
