[workspace]
resolver = "2"
members = [
    #"rustorio-circuits",
    "rustorio-blueprint",
    "rustorio-export",
    "rustorio-loader",
    "rustorio-locale",
    "rustorio-lua-api",
    "rustorio-lua-api-derive",
    "rustorio-main",
    "rustorio-prototype",
    "rustorio-remote/factorio-remote",
    "rustorio-remote/factorio-data",
    "rustorio-tool",
]
