[package]
name = "rustorio-circuits"
version = "0.1.0"
authors = ["Janosch Gräf <janosch.graef@gmail.com"]
edition = "2018"
#build = "build.rs"

[dependencies]
log = "0.4"
dotenv = "0.15"
pretty_env_logger = "0.4"
#lalrpop-util = "0.19"
regex = "1.4"
derive_more = "0.99"

rustorio-core = { path = "../rustorio-core", features = ["blueprint"] }

[dev-dependencies]
#lalrpop = "0.19"
