[package]
name = "rustorio-circuits"
version = "0.1.0"
authors = ["Janosch Gräf <janosch.graef@gmail.com"]
edition = "2018"
build = "build.rs"

[dependencies]
log = "0.4"
dotenv = "0.15"
pretty_env_logger = "0.4"
lalrpop-util = "0.19"
regex = "1.4"
derive_more = "0.99"
thiserror = "1.0"
lazy_static = "1.4"
structopt = "0.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustorio-core = { path = "../rustorio-core", features = ["blueprint"] }

[build-dependencies]
lalrpop = { version = "0.19", features = ["lexer"] }
