[package]
name = "rustorio-core"
version = "0.1.0"
authors = ["Janosch Gräf <janosch.graef@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mlua = { version = "0.4", features = ["lua52"] }
mlua_serde = { version = "0.5"  }
thiserror = "1.0"
regex = "1.4"
lazy_static = "1.4"
legion = "0.3"
byteorder = "1.3"

rustorio-proptree = { path = "../rustorio-proptree" }

[dev-dependencies]
pretty_env_logger = "0.4"
