[package]
name = "rustorio-core"
version = "0.1.0"
authors = ["Janosch Gräf <janosch.graef@gmail.com>"]
edition = "2018"

[[bin]]
name = "blueprint-tool"
path = "src/blueprint/tool.rs"
required-features = ["blueprint-tool"]

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mlua = { version = "0.4", features = ["lua52"] }
mlua_serde = { version = "0.5"  }
thiserror = "1.0"
regex = "1.4"
lazy_static = "1.4"
legion = "0.3"
byteorder = "1.3"
nalgebra = { version = "0.23", features = ["serde-serialize"] }
derive_more = "0.99"
palette = { version = "0.5", features = ["serializing"] }
num = "0.3"
bitflags = "1.2"
parse-display = "0.4"
base64 = { version = "0.13", optional = true }
libflate = { version = "1.0", optional = true }

rustorio-proptree = { path = "../rustorio-proptree" }
rustorio-data = { path = "../rustorio-data" }
rustorio-data-derive = { path = "../rustorio-data-derive" }

# Dependencies for tools
structopt = { version = "0.3", optional = true }
anyhow = { version = "1.0", optional = true }

[dev-dependencies]
pretty_env_logger = "0.4"

[features]
default = ["blueprint"]
prototypes = []
blueprint = ["base64", "libflate"]
blueprint-tool = ["blueprint", "structopt"]
