[package]
name = "rustorio-core"
version = "0.1.0"
authors = ["Janosch Gräf <janosch.graef@gmail.com>"]
edition = "2021"

[[bin]]
name = "blueprint-tool"
path = "src/blueprint/tool.rs"
#required-features = ["blueprint-tool"]

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mlua = { version = "0.9", features = ["lua52", "serialize"] }
thiserror = "1.0"
regex = "1.10"
lazy_static = "1.4"
byteorder = "1.3"
nalgebra = { version = "0.32", features = ["serde-serialize"] }
derive_more = "0.99"
palette = { version = "0.7", features = ["serializing"] }
num = "0.4"
bitflags = "2.3"
parse-display = "0.8"
base64 = { version = "0.21", optional = true }
libflate = { version = "2.0", optional = true }
bigdecimal = { version = "0.4", features = ["serde"] }
num-bigint = "0.4"

rustorio-proptree = { path = "../rustorio-proptree" }
rustorio-data = { path = "../rustorio-data" }
rustorio-data-derive = { path = "../rustorio-data-derive" }

# Dependencies for tools
structopt = { version = "0.3" }
anyhow = { version = "1.0" }

[dev-dependencies]
pretty_env_logger = "0.5"

[features]
default = ["blueprint"]
prototypes = []
blueprint = ["base64", "libflate"]
#blueprint-tool = ["blueprint", "structopt"]
