[package]
name = "rustorio-data-derive"
version = "0.1.0"
authors = ["Janosch Gräf <janosch@nimiq.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
darling = "0.10"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
heck = "0.3"

rustorio-data = { path = "../rustorio-data" }
