[package]
name = "rustorio-export"
version = "0.1.0"
authors = ["Janosch Gräf <janosch.graef@gmail.com>"]
edition = "2021"

[dependencies]
log = "0.4"
dotenv = "0.15"
pretty_env_logger = "0.5"
color-eyre = "0.6"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24"

[dependencies.rustorio-prototype]
path = "../rustorio-prototype"
features = ["lua-api", "serde"]

[dependencies.rustorio-loader]
path = "../rustorio-loader"
