[package]
name = "rustorio-loader"
version = "0.1.0"
authors = ["Janosch Gräf <janosch.graef@gmail.com>"]
edition = "2021"

[dependencies]
log = "0.4"
thiserror = "1.0"
mlua = { version = "0.9", features = ["lua52"] }
serde = { version = "1.0", features = ["derive"] }
byteorder = "1.3"
serde_json = "1.0"
zip = "0.6"
parking_lot = "0.12"
lazy_static = "1.4"
regex = "1.10"

[dependencies.rustorio-lua-api]
version = "0.1.0"
path = "../rustorio-lua-api"
