[package]
name = "rustorio-lua-api"
version = "0.1.0"
authors = ["Janosch Gräf <janosch.graef@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
thiserror = "1.0"
mlua = { version = "0.9", features = ["lua52"] }
serde = { version = "1.0", features = ["derive"], optional = true }
derive_more = "0.99"
nalgebra = { version = "0.32", optional = true }
palette = { version = "0.7", optional = true }
byteorder = "1.3"
serde_json = "1.0"
lazy_static = "1.4"
regex = "1.10"

[dependencies.rustorio-lua-api-derive]
version = "0.1.0"
path = "../rustorio-lua-api-derive"
optional = true

[dependencies.rustorio-proptree]
version = "0.1.0"
path = "../rustorio-proptree"

[features]
default = []
derive = ["dep:rustorio-lua-api-derive"]
serde = ["dep:serde", "nalgebra/serde-serialize", "palette/serializing", "mlua/serialize"]

