[package]
name = "rustorio-main"
version = "0.1.0"
authors = ["Janosch Gräf <janosch@nimiq.com>"]
edition = "2018"

[dependencies]
log = "0.4"
dotenv = "0.15"
pretty_env_logger = "0.4"
mlua = { version = "0.4", features = ["lua52"] }

rustorio-core = { path = "../rustorio-core", features = ["prototypes"] }
rustorio-data = { path = "../rustorio-data" }
rustorio-data-derive = { path = "../rustorio-data-derive" }
