[package]
name = "rustorio-main"
version = "0.1.0"
authors = ["Janosch Gräf <janosch.graef@gmail.com>"]
edition = "2021"

[dependencies]
log = "0.4"
dotenv = "0.15"
pretty_env_logger = "0.5"
color-eyre = "0.6"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
thiserror = "1.0"
arrayvec = "0.7"
regex = "1.9"
lazy_static = "1.4"
num-traits = "0.2"

rustorio-core = { path = "../rustorio-core", features = ["prototypes"] }
rustorio-data = { path = "../rustorio-data" }
rustorio-data-derive = { path = "../rustorio-data-derive" }
