[package]
name = "rustorio-protoview"
version = "0.1.0"
authors = ["Janosch Gräf <janosch.graef@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
dotenv = "0.15"
pretty_env_logger = "0.4"
cursive = "0.14"
cursive_tree_view = "0.6"

rustorio-core = { path = "../rustorio-core", features = ["prototypes"] }
rustorio-data = { path = "../rustorio-data" }
