[package]
name = "rustorio-protoview"
version = "0.1.0"
authors = ["Janosch Gräf <janosch.graef@gmail.com>"]
edition = "2021"

[dependencies]
log = "0.4"
dotenv = "0.15"
pretty_env_logger = "0.5"
cursive = "0.20"
cursive_tree_view = "0.8"

rustorio-core = { path = "../rustorio-core", features = ["prototypes"] }
rustorio-data = { path = "../rustorio-data" }
