[package]
name = "rustorio-tool"
version = "0.1.0"
authors = ["Janosch Gräf <janosch.graef@gmail.com>"]
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
log = "0.4.17"
wasm-bindgen-futures = "0.4.33"
wasm-logger = "0.2.0"
gloo-net = { version = "0.4", features = ["http", "json"] }
gloo-utils = "0.2"
web-sys = { version = "0.3", features = ["Element"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
yew-feather = "1.0"
yew-hooks = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
regex = "1.9"
lazy_static = "1.4"

[dependencies.rustorio-prototype]
version = "0.1.0"
path = "../rustorio-prototype"
features = ["serde"]
