[package]
name = "factorio-data"
version = "0.1.0"
authors = ["Janosch Gräf <janosch.graef@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.12"
libflate = "1.0"
nalgebra = { version = "0.21", features = ["serde-serialize"] }
regex = "1.3"
parse-display = "0.1"
